# PF-26L-parser

./: README.md  example.py  example2.py  parser.cabal
app/: DataTypes.hs  Literals.hs  Main.hs  Math.hs  Parser.hs  Utils.hs  Valuable.hs
tests/: Assignment.hs  CallSpec.hs  EverythingSpec.hs  LoopSpec.hs  Main.hs
