cabal-version:      2.4
name:               parser
version:            0.1.0.0
license:            NONE
author:             jjosko
maintainer:         01187232@pw.edu.pl
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Parser
        DataTypes
        Literals
        Math
        Utils
        Valuable
    hs-source-dirs:   app
    build-depends:
        base ^>=4.18.3.0,
        megaparsec,
        text ^>=2.0
    default-language: Haskell2010

executable parser
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        Parser
        DataTypes
        Literals
        Valuable
        Math
        Utils
    build-depends:
        base ^>=4.18.3.0,
        parser,
        megaparsec,
        text ^>=2.0
    default-language: Haskell2010

test-suite parser-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    other-modules:
        Assignment
        CallSpec
    build-depends:
        base ^>=4.18.3.0,
        hspec,
        megaparsec,
        parser
    default-language: Haskell2010